syntax = "proto3";

package jogasaki.proto.sql.request;

option java_multiple_files = false;
option java_package = "com.tsurugidb.jogasaki.proto";
option java_outer_classname = "SqlRequest";

import "common.proto";

/*
 * Definition of sub fields for Request.
 */

// the placeholder for the prepared statements.
message PlaceHolder {
    // the placeholder location.
    oneof placement {
        // the placeholder name.
        string name = 2;
    }
    reserved 3 to 10;

    // the placeholder type.
    oneof type_info {
        common.AtomType type = 11;
        // the row type.
        common.RowType row_type = 12;
        // the user defined type.
        common.UserType user_type = 13;
    }
    reserved 14 to 19;

    // the type dimension for array types.
    uint32 dimension = 20;
}

// the placeholder replacements.
message Parameter {
    // the placeholder location.
    oneof placement {
        // the placeholder name.
        string name = 2;
    }
    reserved 3 to 10;

    // the replacement values (unset describes NULL).
    oneof value {
        // boolean type.
        bool boolean_value = 11;

        // 32-bit signed integer.
        sint32 int4_value = 14;

        // 64-bit signed integer.
        sint64 int8_value = 15;

        // 32-bit floating point number.
        float float4_value = 16;

        // 64-bit floating point number.
        double float8_value = 17;

        // 128-bit floating decimal number (encoded by decimal128, big-endian).
        bytes decimal_value = 18;

        // character sequence.
        string character_value = 19;

        // octet sequence.
        bytes octet_value = 21;

        // bit sequence.
        common.Bit bit_value = 23;

        // date (number of days offset of epoch 1970-01-01).
        sint64 date_value = 25;

        // time of day (nano-seconds since 00:00:00).
        uint64 time_of_day_value = 26;

        // time point.
        common.TimePoint time_point_value = 27;

        // date-time interval.
        common.DateTimeInterval datetime_interval_value = 28;

        // reference column position (for load action).
        uint64 reference_column_position = 51;

        // reference column name (for load action).
        string reference_column_name = 52;
    }

    reserved 12, 13, 20, 22, 24, 29 to 40, 41 to 50, 53 to 99;
}

// the parameter set for the statement.
message ParameterSet {
    // a list of parameters.
    repeated Parameter elements = 1;
}

// the transaction type.
enum TransactionType {
    // use default transaction type.
    TRANSACTION_TYPE_UNSPECIFIED = 0;
    // short transactions (optimistic concurrency control).
    SHORT = 1;
    // long transactions (pessimistic concurrency control).
    LONG = 2;
    // read only transactions (may be abort-free).
    READ_ONLY = 3;
}

// the transaction priority.
enum TransactionPriority {
    // use default transaction priority.
    TRANSACTION_PRIORITY_UNSPECIFIED = 0;
    // halts the running transactions immediately.
    INTERRUPT = 1;
    // prevents new transactions and waits for the running transactions will end.
    WAIT = 2;
    // halts the running transactions immediately, and keep lock-out until its end.
    INTERRUPT_EXCLUDE = 3;
    // prevents new transactions and waits for the running transactions will end, and keep lock-out until its end.
    WAIT_EXCLUDE = 4;
}

// individual write preservation entry.
message WritePreserve {
    // the target table name to preserve for writes.
    string table_name = 1;
}

// options for beginning transactions
message TransactionOption {
    // the transaction type.
    TransactionType type = 1;

    // the transaction priority.
    TransactionPriority priority = 2;

    // the transaction label.
    string label = 3;

    reserved 4 to 10;

    // write preservations for long transactions.
    repeated WritePreserve write_preserves = 11;

    reserved 12 to 20;
}

// the transaction commit status.
enum CommitStatus {
    // the default commit status (rely on the database settings).
    COMMIT_STATUS_UNSPECIFIED = 0;
    // commit operation has accepted, and the transaction will never abort except system errors.
    ACCEPTED = 10;
    // commit data has been visible for others.
    AVAILABLE = 20;
    // commit data has been saved on the local disk.
    STORED = 30;
    // commit data has been propagated to the all suitable nodes.
    PROPAGATED = 40;
}

/*
 * Each request message
 */

/* For begin request. */
message Begin {
  TransactionOption option = 1;
}

/* For prepare request. */
message Prepare {
  string sql = 1;
  repeated PlaceHolder placeholders = 2;
}

/* For execute statement request. */
message ExecuteStatement {
  common.Transaction transaction_handle = 1;
  string sql = 2;
}

/* For execute query request. */
message ExecuteQuery {
  common.Transaction transaction_handle = 1;
  string sql = 2;
}

/* For execute prepared statement request. */
message ExecutePreparedStatement {
  common.Transaction transaction_handle = 1;
  common.PreparedStatement prepared_statement_handle = 2;
  repeated Parameter parameters = 3;
}

/* For execute prepared query request. */
message ExecutePreparedQuery {
  common.Transaction transaction_handle = 1;
  common.PreparedStatement prepared_statement_handle = 2;
  repeated Parameter parameters = 3;
}

// execute a statement with 2-D parameter table.
message Batch {
    reserved 1 to 10;

    // the transaction ID.
    common.Transaction transaction_handle = 11;

    // the statement ID.
    common.PreparedStatement prepared_statement_handle = 12;

    // the 2-D parameter table.
    repeated ParameterSet parameter_sets = 13;
}

/* For execute dump request. */
message ExecuteDump {
  common.Transaction transaction_handle = 1;
  common.PreparedStatement prepared_statement_handle = 2;
  repeated Parameter parameters = 3;
  string directory = 4;
}

/* For execute load request. */
message ExecuteLoad {
  common.Transaction transaction_handle = 1;
  common.PreparedStatement prepared_statement_handle = 2;
  repeated Parameter parameters = 3;
  repeated string file = 4;
}

/* For commit request. */
message Commit {
    common.Transaction transaction_handle = 1;

    // response will be returned after reaching the commit status.
    CommitStatus notification_type = 2;
}

/* For rollback request. */
message Rollback {
  common.Transaction transaction_handle = 1;
}

/* For dispose prepared sql. */
message DisposePreparedStatement {
  common.PreparedStatement prepared_statement_handle = 1;
}

/* For disconnect current session. */
message Disconnect {
}

/* For explain prepared sql. */
message Explain {
  common.PreparedStatement prepared_statement_handle = 1;
  repeated Parameter parameters = 2;
}

// describe about the table.
message DescribeTable {
    reserved 1 to 10;

    // the table name to describe.
    string name = 11;
}

/* For request message to the SQL service. */
message Request {
  common.Session session_handle = 1;
  oneof request {
    Begin begin = 2;
    Prepare prepare = 3;
    ExecuteStatement execute_statement = 4;
    ExecuteQuery execute_query = 5;
    ExecutePreparedStatement execute_prepared_statement = 6;
    ExecutePreparedQuery execute_prepared_query = 7;
    Commit commit = 8;
    Rollback rollback = 9;
    DisposePreparedStatement dispose_prepared_statement = 10;
    Disconnect disconnect = 11;
    Explain explain = 12;
    ExecuteDump execute_dump = 13;
    ExecuteLoad execute_load = 14;
    DescribeTable describe_table = 15;
    Batch batch = 16;
  }
}
